--- a/project/src/main/res/values-en-rGB/strings.xml
+++ b/project/src/main/res/values-en-rGB/strings.xml
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">Traveller Information</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Main traveller details</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">Enter Main Traveller Details</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">Main Traveller</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Saved</string>
     <!-- Edit button for traveler/payment -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">of guests recommend</string>
+    <string name="hotel_guest_recommend">of 5 - guest rating</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
