--- a/project/src/main/res/values-in/strings.xml
+++ b/project/src/main/res/values-in/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Tidak ditemukan hasil pencarian. Harap coba kembali mencari dengan kriteria yang berbeda.</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Kami tidak berhasil mendeteksi lokasi Anda saat ini untuk mencarikan aktivitas yang relevan bagi Anda.</string> 
+    <string name="error_lx_current_location_search_message">Kami tidak dapat menentukan lokasi untuk mencarikan aktivitas yang sesuai di sekitar Anda.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Kesalahan</string>
     <!-- Text for error toolbar-->
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">Informasi Traveler</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Rincian traveler utama</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">Masukkan Rincian Traveler Utama</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">Traveler Utama</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Tersimpan</string>
     <!-- Edit button for traveler/payment -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">tamu merekomendasikan</string>
+    <string name="hotel_guest_recommend">dari 5 - skor tamu</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
