--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">La tua ricerca non ha prodotto risultati. Effettua nuovamente la ricerca impostando parametri diversi.</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Non siamo riusciti a stabilire la tua posizione per localizzare le attività vicine.</string> 
+    <string name="error_lx_current_location_search_message">Non siamo riusciti a stabilire la tua posizione per trovare cose da fare nelle tue vicinanze.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Errore</string>
     <!-- Text for error toolbar-->
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">Dati viaggiatore</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Dettagli del viaggiatore principale</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">Inserisci i dettagli del viaggiatore principale</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">Viaggiatore principale</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Salvati</string>
     <!-- Edit button for traveler/payment -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">degli ospiti consiglia questa struttura</string>
+    <string name="hotel_guest_recommend">su 5 - valutazione degli ospiti</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
