--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">검색 결과가 없습니다. 다른 기준으로 다시 검색해 주세요.</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">고객님 주변의 즐길거리를 찾기 위한 고객님의 현재 위치를 확인할 수 없습니다.</string> 
+    <string name="error_lx_current_location_search_message">주변 즐길거리 검색에 필요한 고객님의 현재 위치를 확인할 수 없습니다.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">오류</string>
     <!-- Text for error toolbar-->
@@ -597,7 +597,7 @@
     <!-- Free cancellation text in offer  -->
     <string name="lx_free_cancellation">무료 취소</string>
     <!-- Message for voucherless offers  -->
-    <string name="lx_voucherless_offer">전자 바우처</string>
+    <string name="lx_voucherless_offer">전자 형태 바우처</string>
     <!-- Message for voucherless offers  -->
     <string name="lx_print_voucher_offer">출력한 바우처 필요</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">여행객 정보</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">주 여행객 정보</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">주 여행객 정보 입력</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">주 여행객</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">저장된 정보</string>
     <!-- Edit button for traveler/payment -->
@@ -1984,9 +1980,9 @@
     <!-- email disclaimer -->
     <string name="email_disclaimer">예약 일정이 고객님의 이메일로 전송됩니다.</string>
     <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
-    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">여행 상품, 특가 혜택 및 기타 정보가 들어 있는 {brand}의 이메일을 받지 않겠습니다.</string>
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">여행 특가 상품, 특별 혜택 및 기타 정보가 들어 있는 {brand}의 이메일을 받지 않겠습니다.</string>
     <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
-    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">여행 상품, 특가 혜택 및 기타 정보가 들어 있는 {brand}의 이메일을 받겠습니다.</string>
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">여행 특가 상품, 특별 혜택 및 기타 정보가 들어 있는 {brand}의 이메일을 받겠습니다.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">명의 고객이 추천</string>
+    <string name="hotel_guest_recommend">점(총 5점 만점)의 고객 평점</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
@@ -2989,7 +2986,7 @@
     <!-- Display for distances.  1$ is a distance, 2$ is a unit, e.g. "5 miles away" -->
     <string name="distance_template">%1$s%2$s 거리</string>
     <!-- Display for distances - but abbreviated, for space.  1$ is a distance, 2$ is a unit, e.g. "5 mi" -->
-    <string name="distance_template_short">%1$s %2$s</string>
+    <string name="distance_template_short">%1$s%2$s</string>
 
     <!-- Menu strings -->
     <!-- Label for "settings" menu item. -->
@@ -3605,7 +3602,7 @@
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">이 예약을 완료함으로써 본인은 %1$s, %2$s 및 %3$s을 읽었으며 이를 수락하는 데 동의합니다.</string>
     <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
-    <string name="account_creation_legal_TEMPLATE">%1$s 및 %2$s을 읽었고 이에 동의합니다.</string>
+    <string name="account_creation_legal_TEMPLATE">%1$s 및 %2$s 내용을 읽었고 이에 동의합니다.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">각 아동의 나이 선택</string>
