--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Din sökning gav inga resultat. Prova att söka igen med andra kriterier.</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Vi kunde inte avgöra din nuvarande plats för att hitta aktiviteter runt dig.</string> 
+    <string name="error_lx_current_location_search_message">Vi kunde inte avgöra din nuvarande plats för att hitta aktiviteter nära dig.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Det uppstod ett fel</string>
     <!-- Text for error toolbar-->
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">Resenärens uppgifter</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Huvudresenärens uppgifter</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">Ange huvudresenärens uppgifter</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">Huvudresenär</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Sparat</string>
     <!-- Edit button for traveler/payment -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">av gästerna rekommenderar</string>
+    <string name="hotel_guest_recommend">av 5 - gästbetyg</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
