--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">ไม่พบผลลัพธ์สำหรับการค้นหาของคุณ โปรดลองเปลี่ยนเกณฑ์การค้นหาใหม่</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">เราไม่สามารถระบุตำแหน่งปัจจุบันของคุณเพื่อหากิจกรรมใกล้ตัวคุณได้</string> 
+    <string name="error_lx_current_location_search_message">เราไม่สามารถระบุตำแหน่งของคุณเพื่อค้นหากิจกรรมใกล้ตัวคุณได้</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">เกิดข้อผิดพลาด</string>
     <!-- Text for error toolbar-->
@@ -1896,10 +1896,6 @@
     <string name="enter_traveler_info">ข้อมูลผู้เดินทาง</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">รายละเอียดของผู้เดินทางหลัก</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">ป้อนรายละเอียดผู้เดินทางหลัก</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">ผู้เดินทางหลัก</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">บันทึกไว้</string>
     <!-- Edit button for traveler/payment -->
@@ -2565,6 +2561,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">ของผู้เข้าพักแนะนำ</string>
+    <string name="hotel_guest_recommend">จาก 5 - คะแนนจากผู้เข้าพัก</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
