--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Không tìm được kết quả. Vui lòng thử tìm lại với dữ liệu khác.</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Chúng tôi không xác nhận được địa điểm hiện tại của quý vị để tìm hoạt động giải trí phù hợp.</string> 
+    <string name="error_lx_current_location_search_message">Chúng tôi không xác định được vị trí của quý vị để tìm hoạt động trong khu vực.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Lỗi</string>
     <!-- Text for error toolbar-->
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">Thông tin khách</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Chi tiết khách chính</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">Nhập thông tin khách chính</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">Khách chính</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Đã lưu</string>
     <!-- Edit button for traveler/payment -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">khách giới thiệu</string>
+    <string name="hotel_guest_recommend">/5 - đánh giá của khách</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
