--- a/project/src/main/res/values-zh-rTW/strings.xml
+++ b/project/src/main/res/values-zh-rTW/strings.xml
@@ -569,7 +569,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">沒有搜尋結果。請使用其他條件再搜尋一次。</string>
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">無法識別您目前的位置以找到附近的活動。</string> 
+    <string name="error_lx_current_location_search_message">我們無法識別您目前的位置，因此無法搜尋您附近的活動。</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">錯誤</string>
     <!-- Text for error toolbar-->
@@ -1894,10 +1894,6 @@
     <string name="enter_traveler_info">旅客資訊</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">主要旅客資訊</string>
-    <!-- AB test variate 1 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate1">輸入主要旅客資訊</string>
-    <!-- AB test variate 2 - Traveler Details (for flights) -->
-    <string name="traveler_details_variate2">主要旅客</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">已儲存</string>
     <!-- Edit button for traveler/payment -->
@@ -2563,6 +2559,7 @@
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">旅客推薦</string>
+    <string name="hotel_guest_recommend">/ 5 - 旅客評分</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
