--- a/project/src/wotif/res/values/strings.xml
+++ b/project/src/wotif/res/values/strings.xml
@@ -46,4 +46,13 @@
 
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
     <string name="total_due_today_wotif">Due to Wotif Today</string>
+
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_a_Wotif_account">Create a Wotif account</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Wotif">Welcome to Wotif</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Wotif_account_already_exists">A Wotif account already exists with this email</string>
+
 </resources>
