--- a/project/src/lastMinute/res/values/strings.xml
+++ b/project/src/lastMinute/res/values/strings.xml
@@ -49,4 +49,13 @@
 
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
     <string name="total_due_today_lm">Due to lastminute.com.au Today</string>
+
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_a_LastMinute_account">Create a lastminute.com.au account</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_LastMinute">Welcome to lastminute.com.au</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_LastMinute_account_already_exists">A lastminute.com.au account already exists with this email</string>
+
 </resources>
