--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -3653,4 +3653,6 @@
     <string name="acct_Welcome_to_Expedia">Welcome to Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">An Expedia account already exists with this email</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 years old)</string>
 </resources>
