4957 - Hotel results UI fixes.
https://eiwork.mingle.thoughtworks.com/projects/eb_ad_app/cards/4957.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2599,6 +2599,8 @@
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">of guests recommend</string>
     <string name="hotel_guest_recommend">of 5 - guest rating</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
     <!-- Label to show amenities -->
