4897 Created string variables, modified star rating bar styling

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -3687,4 +3687,14 @@
     <string name="acct_Expedia_account_already_exists">An Expedia account already exists with this email</string>
     <!-- Children age label on hotel search -->
     <string name="children_age_label">(0-17 years old)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Neighborhoods</string>
+    <string name="gym">Gym</string>
+    <string name="room_service">Room Service</string>
+    <string name="business_center">Business Center</string>
+    <string name="accessible">Accessible</string>
+    <string name="amenities">Amenities</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Star Rating</string>
 </resources>
