5239 - Not Rated Hotels messaging
- Display Not Rated instead of 0/5 on SRP.
- Display No Reviews and 0 Reviews message on details screen.
- Display Best Price Guarantee if there is no ETP, Free Cancellation or reviews.
- TextView.setAppearance does not seem to pick the style completely like
  paddings. Setting the etp/free cancellation styles in code.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2734,6 +2734,8 @@
         <item quantity="many">View %d Reviews</item>
         <item quantity="other">View %d Reviews</item>
     </plurals>
+
+    <string name="zero_reviews">0 Reviews</string>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
